XReflection - Stage III - Proxification
* Added experimental ReflectiveProxy API (XReflection Stage III - Proxification) which is has a significant readability advantage but
  has a significant
  performance disadvantage which makes it unusable in most sitautions, however this prototype will allow us to
  develop the next reflection API (Stage IV) which will have significant advantage in terms of both readability and
  performance if it's successful.

* Added JMH Benchmark which is not 100% reliable due to:
    * Running inside IDE testing environment which can be affected by many external factors instead of using a JAR.
    * Not running in forked mode. We need to retain the server state.
    * Being run using Maven's exec plugin which might be able to affect our benchmarks.